# gnome-paper

./: Cargo.toml  README.md  dyn-wallpapers-cron.sh  dyn-wallpapers.sh
assets/: gnome-paper.config.toml  gpaper.config.toml  gpaper.images.toml
src/: application.rs  config.rs  domain.rs  errors.rs  image.rs  main.rs  tests.rs  tokio_support.rs
