[package]
name = "gnome-paper"
version = "0.1.0"
edition = "2021"



[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_repr = "0.1.17"
toml = "0.8.8"
#tokio = {version= "1.32.0", features=["full"], optional=true}


[dev-dependencies]
named-ctor = "0.1.1"


